--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,7 +4,7 @@
   // colors
   --light: #00c3ff;
   // --light: #ff7979;
-  --primary: #2071e7;
+  --primary: #1abc9c;
   // --primary: #e74c3c;
   --dark: #2980b9;
   // --dark: #c0392b;
